--- a/src/pod/code.rs.html
+++ b/src/pod/code.rs.html
@@ -300,7 +300,7 @@
 <span class='kw'>use</span> ::{<span class='ident'>PodType</span>, <span class='ident'>PodExt</span>};
 
 <span class='kw'>use</span> <span class='ident'>uninitialized</span>::{<span class='ident'>uninitialized</span>, <span class='ident'>UNINITIALIZED</span>};
-<span class='kw'>use</span> <span class='ident'>nue_io</span>::<span class='ident'>ReadExact</span>;
+<span class='kw'>use</span> <span class='ident'>nue_io</span>::<span class='ident'>ReadExactExt</span>;
 
 <span class='doccomment'>/// Encodes an value&#39;s binary representation to a `Write`.</span>
 <span class='doccomment'>///</span>
