--- a/pod/index.html
+++ b/pod/index.html
@@ -115,9 +115,7 @@
                         <td><a class='trait' href='trait.PodType.html'
                                title='pod::PodType'>PodType</a></td>
                         <td class='docblock short'>
-                             <p>An unsafe marker trait that indicates a type can be used as Plain Old Data.
-Should be used very carefully to mark a type as POD when it contains a non-POD
-member such as a reference.</p>
+                             <p>An unsafe marker trait that indicates a type can be used as Plain Old Data.</p>
 
                         </td>
                     </tr>
