--- a/src/nue_io/lib.rs.html
+++ b/src/nue_io/lib.rs.html
@@ -51,6 +51,19 @@
 <span id="9"> 9</span>
 <span id="10">10</span>
 <span id="11">11</span>
+<span id="12">12</span>
+<span id="13">13</span>
+<span id="14">14</span>
+<span id="15">15</span>
+<span id="16">16</span>
+<span id="17">17</span>
+<span id="18">18</span>
+<span id="19">19</span>
+<span id="20">20</span>
+<span id="21">21</span>
+<span id="22">22</span>
+<span id="23">23</span>
+<span id="24">24</span>
 </pre><pre class='rust '>
 <span class='attribute'>#<span class='op'>!</span>[<span class='ident'>deny</span>(<span class='ident'>missing_docs</span>)]</span>
 
@@ -62,7 +75,20 @@
 <span class='doccomment'>/// An extension for `Read`ing an exact amount of data.</span>
 <span class='kw'>pub</span> <span class='kw'>mod</span> <span class='ident'>read_exact</span>;
 
-<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>read_exact</span>::<span class='ident'>ReadExact</span>;
+<span class='doccomment'>/// Extensions for seeking around streams that do not normally support it.</span>
+<span class='kw'>pub</span> <span class='kw'>mod</span> <span class='ident'>seek_forward</span>;
+
+<span class='kw'>mod</span> <span class='ident'>buf_seeker</span>;
+<span class='kw'>mod</span> <span class='ident'>region</span>;
+<span class='kw'>mod</span> <span class='ident'>align</span>;
+<span class='kw'>mod</span> <span class='ident'>take</span>;
+
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>seek_forward</span>::{<span class='ident'>SeekForward</span>, <span class='ident'>SeekRewind</span>};
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>read_exact</span>::<span class='ident'>ReadExactExt</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>buf_seeker</span>::<span class='ident'>BufSeeker</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>region</span>::<span class='ident'>Region</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>align</span>::<span class='ident'>SeekAlignExt</span>;
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>take</span>::<span class='ident'>Take</span>;
 </pre>
 </section>
     <section id='search' class="content hidden"></section>
