--- a/src/nue_io/read_exact.rs.html
+++ b/src/nue_io/read_exact.rs.html
@@ -77,7 +77,7 @@
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>byteorder</span>::<span class='ident'>Error</span>;
 
 <span class='doccomment'>/// Extension trait that provides `read_exact` for all `Read` implementations.</span>
-<span class='kw'>pub</span> <span class='kw'>trait</span> <span class='ident'>ReadExact</span> {
+<span class='kw'>pub</span> <span class='kw'>trait</span> <span class='ident'>ReadExactExt</span> {
     <span class='doccomment'>/// Reads into the entirety of `buf` or fails with an error.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// The `Read` equivalent of `Write::write_all`.</span>
@@ -85,7 +85,7 @@
     <span class='kw'>fn</span> <span class='ident'>read_exact</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>buf</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> [<span class='ident'>u8</span>]) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span>(), <span class='ident'>Error</span><span class='op'>&gt;</span>;
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>R</span>: <span class='ident'>Read</span><span class='op'>&gt;</span> <span class='ident'>ReadExact</span> <span class='kw'>for</span> <span class='ident'>R</span> {
+<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>R</span>: <span class='ident'>Read</span><span class='op'>&gt;</span> <span class='ident'>ReadExactExt</span> <span class='kw'>for</span> <span class='ident'>R</span> {
     <span class='kw'>fn</span> <span class='ident'>read_exact</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='kw-2'>mut</span> <span class='ident'>buf</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> [<span class='ident'>u8</span>]) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span>(), <span class='ident'>Error</span><span class='op'>&gt;</span> {
         <span class='kw'>while</span> <span class='ident'>buf</span>.<span class='ident'>len</span>() <span class='op'>&gt;</span> <span class='number'>0</span> {
             <span class='kw'>match</span> <span class='self'>self</span>.<span class='ident'>read</span>(<span class='ident'>buf</span>) {
