--- a/nue_macros/index.html
+++ b/nue_macros/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/nue_macros/lib.rs.html#1-631' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/nue_macros/lib.rs.html#1-634' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p><code>#[derive(..)]</code> attributes for POD and binary encodable types.</p>
 
 <h1 id="attributes" class='section-header'><a
@@ -66,6 +66,10 @@ allows access to member padding, which may be unsafe uninitialized data.</p>
 
 <h3 id="example" class='section-header'><a
                            href="#example">Example</a></h3><pre class='rust rust-example-rendered'>
+<span class='attribute'>#<span class='op'>!</span>[<span class='ident'>feature</span>(<span class='ident'>plugin</span>, <span class='ident'>custom_derive</span>, <span class='ident'>custom_attribute</span>)]</span>
+<span class='attribute'>#<span class='op'>!</span>[<span class='ident'>plugin</span>(<span class='ident'>nue_macros</span>)]</span>
+
+<span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>pod</span>;
 <span class='kw'>use</span> <span class='ident'>pod</span>::{<span class='ident'>Encode</span>, <span class='ident'>PodExt</span>};
 
 <span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>PodReprPacked</span>)]</span>
