--- a/nue_macros/index.html
+++ b/nue_macros/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/nue_macros/lib.rs.html#1-634' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/nue_macros/lib.rs.html#1-221' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p><code>#[derive(..)]</code> attributes for POD and binary encodable types.</p>
 
 <h1 id="attributes" class='section-header'><a
@@ -53,16 +53,12 @@
 <h2 id="#[derive(pod)]" class='section-header'><a
                            href="##[derive(pod)]"><code>#[derive(Pod)]</code></a></h2>
 <p>Marks a struct as <code>pod::Pod</code>. It must only contain other <code>Pod</code> members, and
-the derive will fail unless an explicit <code>repr</code> is applied to the type.</p>
+the type must be packed.</p>
 
-<h3 id="#[derive(podreprpacked)]" class='section-header'><a
-                           href="##[derive(podreprpacked)]"><code>#[derive(PodReprPacked)]</code></a></h3>
-<p>Marks a struct as both <code>#[repr(packed)]</code> and <code>pod::Pod</code>.</p>
-
-<h3 id="#[derive(podreprc)]" class='section-header'><a
-                           href="##[derive(podreprc)]"><code>#[derive(PodReprC)]</code></a></h3>
-<p>Similar to <code>PodReprPacked</code> but uses <code>#[repr(C)]</code> instead. Note that this
-allows access to member padding, which may be unsafe uninitialized data.</p>
+<h3 id="#[derive(podpacked)]" class='section-header'><a
+                           href="##[derive(podpacked)]"><code>#[derive(PodPacked)]</code></a></h3>
+<p>Marks a struct as <code>pod::Pod</code>, and also applies the <code>#[repr(packed)]</code>
+attribute to the type.</p>
 
 <h3 id="example" class='section-header'><a
                            href="#example">Example</a></h3><pre class='rust rust-example-rendered'>
@@ -72,11 +68,11 @@ allows access to member padding, which may be unsafe uninitialized data.</p>
 <span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>pod</span>;
 <span class='kw'>use</span> <span class='ident'>pod</span>::{<span class='ident'>Encode</span>, <span class='ident'>PodExt</span>};
 
-<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>PodReprPacked</span>)]</span>
+<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Pod</span>)]</span>
+<span class='attribute'>#[<span class='ident'>repr</span>(<span class='ident'>packed</span>)]</span>
 <span class='kw'>struct</span> <span class='ident'>Data</span>(<span class='ident'>u8</span>);
 
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>Data</span>(<span class='number'>5</span>).<span class='ident'>as_slice</span>(), <span class='kw-2'>&amp;</span>[<span class='number'>5</span>]);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>Data</span>(<span class='number'>5</span>).<span class='ident'>as_slice</span>(), <span class='kw-2'>&amp;</span>[<span class='number'>5</span>]);</pre>
 
 <h2 id="#[derive(nueencode,-nuedecode)]" class='section-header'><a
                            href="##[derive(nueencode,-nuedecode)]"><code>#[derive(NueEncode, NueDecode)]</code></a></h2>
@@ -93,6 +89,21 @@ arbitrary Rust expressions. Member variables may be accessed through <code>self<
 The order of the attributes doesn&#39;t usually matter, though <code>align</code> and <code>skip</code> interact
 differently depending on which is defined first.</p>
 
+<h4 id="assert" class='section-header'><a
+                           href="#assert"><code>assert</code></a></h4>
+<p>Asserts that some property is true before continuing with the operation.</p>
+<pre class='rust rust-example-rendered'>
+<span class='kw'>use</span> <span class='ident'>pod</span>::<span class='ident'>Decode</span>;
+
+<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>NueDecode</span>)]</span>
+<span class='kw'>struct</span> <span class='ident'>Data</span>(
+    <span class='attribute'>#[<span class='ident'>nue</span>(<span class='ident'>assert</span> <span class='op'>=</span> <span class='string'>&quot;self.0 == 0&quot;</span>)]</span>
+    <span class='ident'>u8</span>
+);
+
+<span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='kw-2'>&amp;</span>[<span class='number'>1</span>];
+<span class='macro'>assert</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>is_err</span>());</pre>
+
 <h4 id="align" class='section-header'><a
                            href="#align"><code>align</code></a></h4>
 <p>Aligns the field to an offset of the given multiple.</p>
@@ -108,8 +119,7 @@ differently depending on which is defined first.</p>
 
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='ident'>Data</span>(<span class='number'>2</span>, <span class='string'>&quot;hi&quot;</span>);
 <span class='kw'>let</span> <span class='ident'>cmp</span> <span class='op'>=</span> <span class='kw-2'>&amp;</span>[<span class='number'>2</span>, <span class='number'>0</span>, <span class='number'>0</span>, <span class='string'>b&#39;h&#39;</span>, <span class='string'>b&#39;i&#39;</span>];
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);</pre>
 
 <h4 id="skip" class='section-header'><a
                            href="#skip"><code>skip</code></a></h4>
@@ -126,8 +136,7 @@ differently depending on which is defined first.</p>
 
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='ident'>Data</span>(<span class='number'>2</span>, <span class='string'>&quot;hi&quot;</span>);
 <span class='kw'>let</span> <span class='ident'>cmp</span> <span class='op'>=</span> <span class='kw-2'>&amp;</span>[<span class='number'>2</span>, <span class='number'>0</span>, <span class='string'>b&#39;h&#39;</span>, <span class='string'>b&#39;i&#39;</span>];
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);</pre>
 
 <h4 id="cond" class='section-header'><a
                            href="#cond"><code>cond</code></a></h4>
@@ -147,8 +156,7 @@ differently depending on which is defined first.</p>
 <span class='kw'>let</span> <span class='ident'>u</span> <span class='op'>=</span> ();
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='ident'>Data</span>(<span class='number'>2</span>, <span class='kw-2'>&amp;</span><span class='ident'>u</span>);
 <span class='kw'>let</span> <span class='ident'>cmp</span> <span class='op'>=</span> <span class='kw-2'>&amp;</span>[<span class='number'>2</span>];
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>data</span>.<span class='ident'>encode_vec</span>().<span class='ident'>unwrap</span>(), <span class='ident'>cmp</span>);</pre>
 
 <h4 id="default" class='section-header'><a
                            href="#default"><code>default</code></a></h4>
@@ -167,8 +175,7 @@ differently depending on which is defined first.</p>
 <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>(), <span class='kw-2'>&amp;</span><span class='ident'>Data</span>(<span class='number'>2</span>, <span class='number'>5</span>));
 
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='kw-2'>&amp;</span>[<span class='number'>1</span>, <span class='number'>2</span>];
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>(), <span class='kw-2'>&amp;</span><span class='ident'>Data</span>(<span class='number'>1</span>, <span class='number'>2</span>));
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>(), <span class='kw-2'>&amp;</span><span class='ident'>Data</span>(<span class='number'>1</span>, <span class='number'>2</span>));</pre>
 
 <h4 id="limit" class='section-header'><a
                            href="#limit"><code>limit</code></a></h4>
@@ -183,8 +190,7 @@ differently depending on which is defined first.</p>
 );
 
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='string'>b&quot;hello&quot;</span>;
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>().<span class='number'>0</span>, <span class='string'>&quot;hell&quot;</span>);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='kw-2'>&amp;</span><span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>().<span class='number'>0</span>, <span class='string'>&quot;hell&quot;</span>);</pre>
 
 <h4 id="consume" class='section-header'><a
                            href="#consume"><code>consume</code></a></h4>
@@ -203,8 +209,7 @@ differently depending on which is defined first.</p>
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='string'>b&quot;hello\0\0\0\x05&quot;</span>;
 <span class='kw'>let</span> <span class='ident'>data</span> <span class='op'>=</span> <span class='ident'>Data</span>::<span class='ident'>decode_slice</span>(<span class='ident'>data</span>).<span class='ident'>unwrap</span>();
 <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>data</span>.<span class='number'>0</span>.<span class='ident'>to_bytes</span>(), <span class='string'>b&quot;hello&quot;</span>);
-<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>data</span>.<span class='number'>1</span>, <span class='number'>5</span>);
-</pre>
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>data</span>.<span class='number'>1</span>, <span class='number'>5</span>);</pre>
 </div></table></section>
     <section id='search' class="content hidden"></section>
 
