--- a/src/pod/code.rs.html
+++ b/src/pod/code.rs.html
@@ -360,10 +360,17 @@
 <span id="318">318</span>
 <span id="319">319</span>
 <span id="320">320</span>
+<span id="321">321</span>
+<span id="322">322</span>
+<span id="323">323</span>
+<span id="324">324</span>
+<span id="325">325</span>
+<span id="326">326</span>
+<span id="327">327</span>
 </pre><pre class='rust '>
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>io</span>::{<span class='self'>self</span>, <span class='ident'>Read</span>, <span class='ident'>Write</span>, <span class='ident'>BufReader</span>, <span class='ident'>BufRead</span>, <span class='ident'>Cursor</span>};
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>ffi</span>::{<span class='ident'>CString</span>, <span class='ident'>CStr</span>};
-<span class='kw'>use</span> ::{<span class='ident'>PodType</span>, <span class='ident'>PodExt</span>};
+<span class='kw'>use</span> ::{<span class='ident'>Pod</span>, <span class='ident'>PodExt</span>};
 
 <span class='kw'>use</span> <span class='ident'>uninitialized</span>::{<span class='ident'>uninitialized</span>, <span class='ident'>UNINITIALIZED</span>};
 <span class='kw'>use</span> <span class='ident'>nue_io</span>::<span class='ident'>ReadExactExt</span>;
@@ -455,6 +462,14 @@
 
         <span class='ident'>Self</span>::<span class='ident'>decode_options</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>cursor</span>, <span class='ident'>options</span>)
     }
+
+    <span class='doccomment'>/// Implement to assert that the decoded contents are valid</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// # Warning</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// This takes `&amp;self`, meaning the object is still created before validation occurs.</span>
+    <span class='doccomment'>/// Therefore any `Drop` implementations must not assume that the object is valid.</span>
+    <span class='kw'>fn</span> <span class='ident'>validate</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='ident'>io</span>::<span class='prelude-ty'>Result</span><span class='op'>&lt;</span>()<span class='op'>&gt;</span> { <span class='prelude-val'>Ok</span>(()) }
 }
 
 <span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>Encode</span><span class='op'>&gt;</span> <span class='ident'>Encode</span> <span class='kw'>for</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span> {
@@ -481,7 +496,7 @@
     }
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>PodType</span><span class='op'>&gt;</span> <span class='ident'>Encode</span> <span class='kw'>for</span> <span class='ident'>T</span> {
+<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>Pod</span><span class='op'>&gt;</span> <span class='ident'>Encode</span> <span class='kw'>for</span> <span class='ident'>T</span> {
     <span class='kw'>type</span> <span class='ident'>Options</span> <span class='op'>=</span> ();
 
     <span class='kw'>fn</span> <span class='ident'>encode</span><span class='op'>&lt;</span><span class='ident'>W</span>: <span class='ident'>Write</span><span class='op'>&gt;</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>w</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>W</span>) <span class='op'>-&gt;</span> <span class='ident'>io</span>::<span class='prelude-ty'>Result</span><span class='op'>&lt;</span>()<span class='op'>&gt;</span> {
@@ -489,7 +504,7 @@
     }
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>PodType</span><span class='op'>&gt;</span> <span class='ident'>Decode</span> <span class='kw'>for</span> <span class='ident'>T</span> {
+<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>Pod</span><span class='op'>&gt;</span> <span class='ident'>Decode</span> <span class='kw'>for</span> <span class='ident'>T</span> {
     <span class='kw'>type</span> <span class='ident'>Options</span> <span class='op'>=</span> ();
 
     <span class='kw'>fn</span> <span class='ident'>decode</span><span class='op'>&lt;</span><span class='ident'>R</span>: <span class='ident'>Read</span><span class='op'>&gt;</span>(<span class='ident'>r</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>R</span>) <span class='op'>-&gt;</span> <span class='ident'>io</span>::<span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw'>Self</span><span class='op'>&gt;</span> {
@@ -505,15 +520,14 @@
     <span class='kw'>type</span> <span class='ident'>Options</span> <span class='op'>=</span> <span class='ident'>StringDecodeOptions</span>;
 
     <span class='kw'>fn</span> <span class='ident'>decode_options</span><span class='op'>&lt;</span><span class='ident'>R</span>: <span class='ident'>Read</span><span class='op'>&gt;</span>(<span class='ident'>r</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>R</span>, <span class='ident'>options</span>: <span class='ident'>Self</span>::<span class='ident'>Options</span>) <span class='op'>-&gt;</span> <span class='ident'>io</span>::<span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw'>Self</span><span class='op'>&gt;</span> {
-        <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>iter</span>::<span class='ident'>repeat</span>;
-
         <span class='kw'>if</span> <span class='kw'>let</span> <span class='prelude-val'>Some</span>(<span class='ident'>len</span>) <span class='op'>=</span> <span class='ident'>options</span>.<span class='ident'>len</span> {
-            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>vec</span> <span class='op'>=</span> <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='ident'>len</span>);
-            <span class='kw'>if</span> <span class='ident'>UNINITIALIZED</span> {
+            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>vec</span> <span class='op'>=</span> <span class='kw'>if</span> <span class='ident'>UNINITIALIZED</span> {
+                <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>vec</span> <span class='op'>=</span> <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='ident'>len</span>);
                 <span class='kw'>unsafe</span> { <span class='ident'>vec</span>.<span class='ident'>set_len</span>(<span class='ident'>len</span>); }
+                <span class='ident'>vec</span>
             } <span class='kw'>else</span> {
-                <span class='ident'>vec</span>.<span class='ident'>extend</span>(<span class='ident'>repeat</span>(<span class='number'>0</span>).<span class='ident'>take</span>(<span class='ident'>len</span>));
-            }
+                <span class='macro'>vec</span><span class='macro'>!</span>[<span class='number'>0</span>; <span class='ident'>len</span>]
+            };
             <span class='macro'>try</span><span class='macro'>!</span>(<span class='ident'>r</span>.<span class='ident'>read_exact</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>vec</span>[..]));
             <span class='ident'>String</span>::<span class='ident'>from_utf8</span>(<span class='ident'>vec</span>).<span class='ident'>map_err</span>(<span class='op'>|</span><span class='ident'>e</span><span class='op'>|</span> <span class='ident'>io</span>::<span class='ident'>Error</span>::<span class='ident'>new</span>(<span class='ident'>io</span>::<span class='ident'>ErrorKind</span>::<span class='ident'>InvalidInput</span>, <span class='ident'>e</span>))
         } <span class='kw'>else</span> {
