--- a/src/pod/endian.rs.html
+++ b/src/pod/endian.rs.html
@@ -173,14 +173,13 @@
 <span id="131">131</span>
 <span id="132">132</span>
 <span id="133">133</span>
-<span id="134">134</span>
 </pre><pre class='rust '>
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>marker</span>::<span class='ident'>PhantomData</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>fmt</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>hash</span>::{<span class='ident'>Hash</span>, <span class='ident'>Hasher</span>};
 <span class='kw'>use</span> <span class='ident'>byteorder</span>::{<span class='ident'>ByteOrder</span>, <span class='ident'>LittleEndian</span>, <span class='ident'>BigEndian</span>};
 <span class='kw'>use</span> <span class='ident'>uninitialized</span>::<span class='ident'>uninitialized</span>;
-<span class='kw'>use</span> <span class='ident'>pod</span>::{<span class='ident'>Pod</span>, <span class='ident'>PodType</span>};
+<span class='kw'>use</span> <span class='ident'>pod</span>::<span class='ident'>Pod</span>;
 
 <span class='doccomment'>/// A type alias for little endian primitives</span>
 <span class='kw'>pub</span> <span class='kw'>type</span> <span class='ident'>Le</span><span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>LittleEndian</span>, <span class='ident'>T</span><span class='op'>&gt;</span>;
@@ -215,8 +214,7 @@
     }
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span>: <span class='ident'>Pod</span><span class='op'>&gt;</span> <span class='ident'>Pod</span> <span class='kw'>for</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span><span class='op'>&gt;</span> { }
-<span class='kw'>unsafe</span> <span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span>: <span class='ident'>PodType</span><span class='op'>&gt;</span> <span class='ident'>PodType</span> <span class='kw'>for</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span><span class='op'>&gt;</span> { }
+<span class='kw'>unsafe</span> <span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span>: <span class='ident'>Pod</span><span class='op'>&gt;</span> <span class='ident'>Pod</span> <span class='kw'>for</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span><span class='op'>&gt;</span> { }
 
 <span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>B</span>: <span class='ident'>ByteOrder</span>, <span class='ident'>T</span>: <span class='ident'>Default</span> <span class='op'>+</span> <span class='ident'>EndianConvert</span><span class='op'>&gt;</span> <span class='ident'>Default</span> <span class='kw'>for</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span><span class='op'>&gt;</span> {
     <span class='kw'>fn</span> <span class='ident'>default</span>() <span class='op'>-&gt;</span> <span class='kw'>Self</span> {
