--- a/uninitialized/fn.uninitialized.html
+++ b/uninitialized/fn.uninitialized.html
@@ -61,8 +61,7 @@ destructor will run on zeroed data, likely leading to crashes.</p>
                            href="#examples">Examples</a></h1><pre class='rust rust-example-rendered'>
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>;
 
-<span class='kw'>let</span> <span class='ident'>x</span>: <span class='ident'>i32</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='ident'>mem</span>::<span class='ident'>zeroed</span>() };
-</pre>
+<span class='kw'>let</span> <span class='ident'>x</span>: <span class='ident'>i32</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='ident'>mem</span>::<span class='ident'>zeroed</span>() };</pre>
 </div></section>
     <section id='search' class="content hidden"></section>
 
