--- a/packed/trait.Unaligned.html
+++ b/packed/trait.Unaligned.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-11' class='srclink' href='../src/packed/lib.rs.html#20' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-11' class='srclink' href='../src/packed/lib.rs.html#17' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub unsafe trait Unaligned { }</pre><div class='docblock'><p>A marker trait indicating that a type has an alignment of <code>1</code>.</p>
 
 <p>In general, only applies to <code>()</code>, <code>bool</code>, <code>i8</code>, <code>u8</code>, and any types that
@@ -171,8 +171,8 @@ contain only members of these types.</p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
