--- a/src/nue_macros/lib.rs.html
+++ b/src/nue_macros/lib.rs.html
@@ -334,7 +334,7 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! extern crate pod;</span>
 <span class='doccomment'>//! extern crate nue;</span>
-<span class='doccomment'>//! use pod::PodExt;</span>
+<span class='doccomment'>//! use pod::Pod;</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! # fn main() {</span>
 <span class='doccomment'>//! #[derive(Pod)]</span>
@@ -571,8 +571,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
