--- a/nue_codegen/index.html
+++ b/nue_codegen/index.html
@@ -103,8 +103,8 @@ for instructions on how to set up your project to use these macros in stable Rus
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
