--- a/packed/index.html
+++ b/packed/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/packed/lib.rs.html#1-299' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/packed/lib.rs.html#1-296' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>A safe approach to using <code>#[repr(packed)]</code> data.</p>
 
 <p>See <code>nue_macros</code> for the automagic <code>#[packed]</code> attribute.</p>
@@ -123,8 +123,8 @@ and is therefore not safe to use in an unaligned context.</p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
