--- a/packed/trait.Aligned.html
+++ b/packed/trait.Aligned.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-18' class='srclink' href='../src/packed/lib.rs.html#27-110' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-18' class='srclink' href='../src/packed/lib.rs.html#24-107' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub unsafe trait Aligned: <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Sized.html' title='core::marker::Sized'>Sized</a> {
     type Unaligned: <a class='trait' href='../packed/trait.Unaligned.html' title='packed::Unaligned'>Unaligned</a> + <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Sized.html' title='core::marker::Sized'>Sized</a> + <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Copy.html' title='core::marker::Copy'>Copy</a>;
     fn <a href='#method.is_aligned' class='fnname'>is_aligned</a>(u: &amp;Self::<a class='trait' href='../packed/trait.Aligned.html' title='packed::Aligned'>Unaligned</a>) -&gt; <a href='http://doc.rust-lang.org/nightly/std/primitive.bool.html'>bool</a> { ... }
@@ -146,8 +146,8 @@ same size.</p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
