--- a/packed/trait.Packed.html
+++ b/packed/trait.Packed.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-197' class='srclink' href='../src/packed/lib.rs.html#116-119' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-197' class='srclink' href='../src/packed/lib.rs.html#113-116' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub unsafe trait Packed: <a class='trait' href='../packed/trait.Unaligned.html' title='packed::Unaligned'>Unaligned</a> { }</pre><div class='docblock'><p>A marker trait indicating that a type is <code>#[repr(packed)]</code>.</p>
 
 <p>This means that all its members are packed or have an alignment of <code>1</code>,
@@ -171,8 +171,8 @@ and its memory layout is guaranteed to be in member declaration order.</p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
