--- a/packed/type.Un.html
+++ b/packed/type.Un.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-13' class='srclink' href='../src/packed/lib.rs.html#23' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-13' class='srclink' href='../src/packed/lib.rs.html#20' title='goto source code'>[src]</a></span></h1>
 <pre class='rust typedef'>type Un&lt;T&gt; = T::Unaligned;</pre><div class='docblock'><p>A type alias that represents the unaligned type of <code>T</code>.</p>
 </div></section>
     <section id='search' class="content hidden"></section>
@@ -82,8 +82,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
