--- a/pod/code/struct.StringDecodeOptions.html
+++ b/pod/code/struct.StringDecodeOptions.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-2651' class='srclink' href='../../src/pod/code.rs.html#317-320' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-2890' class='srclink' href='../../src/pod/code.rs.html#317-320' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct StringDecodeOptions {
     pub len: <a class='enum' href='http://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.usize.html'>usize</a>&gt;,
 }</pre><div class='docblock'><p>Describes how to decode a <code>String</code></p>
@@ -91,8 +91,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
