--- a/pod/endian/index.html
+++ b/pod/endian/index.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-2798' class='srclink' href='../../src/pod/endian.rs.html#1-198' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-3037' class='srclink' href='../../src/pod/endian.rs.html#1-195' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Containers for primitives</p>
 </div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
@@ -131,8 +131,8 @@ in memory, and transforms on <code>get</code>/<code>set</code></p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
