--- a/pod/endian/trait.EndianConvert.html
+++ b/pod/endian/trait.EndianConvert.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-3189' class='srclink' href='../../src/pod/endian.rs.html#129-135' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-3428' class='srclink' href='../../src/pod/endian.rs.html#129-135' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub trait EndianConvert: <a class='trait' href='../../pod/packed/trait.Aligned.html' title='pod::packed::Aligned'>Aligned</a> {
     fn <a href='#tymethod.from' class='fnname'>from</a>&lt;B: <a class='trait' href='http://burntsushi.net/rustdoc/byteorder/byteorder/trait.ByteOrder.html' title='byteorder::ByteOrder'>ByteOrder</a>&gt;(&amp;Self::<a class='trait' href='../../pod/endian/trait.EndianConvert.html' title='pod::endian::EndianConvert'>Unaligned</a>) -&gt; Self;
     fn <a href='#tymethod.to' class='fnname'>to</a>&lt;B: <a class='trait' href='http://burntsushi.net/rustdoc/byteorder/byteorder/trait.ByteOrder.html' title='byteorder::ByteOrder'>ByteOrder</a>&gt;(self) -&gt; Self::<a class='trait' href='../../pod/endian/trait.EndianConvert.html' title='pod::endian::EndianConvert'>Unaligned</a>;
@@ -104,8 +104,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
