--- a/pod/endian/type.Be.html
+++ b/pod/endian/type.Be.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-2823' class='srclink' href='../../src/pod/endian.rs.html#14' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-3062' class='srclink' href='../../src/pod/endian.rs.html#14' title='goto source code'>[src]</a></span></h1>
 <pre class='rust typedef'>type Be&lt;T&gt; = <a class='struct' href='../../pod/endian/struct.EndianPrimitive.html' title='pod::endian::EndianPrimitive'>EndianPrimitive</a>&lt;<a class='enum' href='http://burntsushi.net/rustdoc/byteorder/byteorder/enum.BigEndian.html' title='byteorder::BigEndian'>BigEndian</a>, T&gt;;</pre><div class='docblock'><p>A type alias for unaligned big endian primitives</p>
 </div></section>
     <section id='search' class="content hidden"></section>
@@ -82,8 +82,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
