--- a/src/pod/endian.rs.html
+++ b/src/pod/endian.rs.html
@@ -235,9 +235,6 @@
 <span id="193">193</span>
 <span id="194">194</span>
 <span id="195">195</span>
-<span id="196">196</span>
-<span id="197">197</span>
-<span id="198">198</span>
 </pre><pre class='rust '>
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>marker</span>::<span class='ident'>PhantomData</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>fmt</span>;
@@ -259,7 +256,7 @@
 
 <span class='doccomment'>/// A POD container for a primitive that stores a value in the specified endianness</span>
 <span class='doccomment'>/// in memory, and transforms on `get`/`set`</span>
-<span class='attribute'>#[<span class='ident'>repr</span>(<span class='ident'>packed</span>)]</span>
+<span class='attribute'>#[<span class='ident'>repr</span>(<span class='ident'>C</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>EndianPrimitive</span><span class='op'>&lt;</span><span class='ident'>B</span>, <span class='ident'>T</span>: <span class='ident'>EndianConvert</span><span class='op'>&gt;</span> {
     <span class='ident'>value</span>: <span class='ident'>T</span>::<span class='ident'>Unaligned</span>,
     <span class='ident'>_phantom</span>: <span class='ident'>PhantomData</span><span class='op'>&lt;</span><span class='op'>*</span><span class='kw'>const</span> <span class='ident'>B</span><span class='op'>&gt;</span>,
@@ -417,10 +414,7 @@
 <span class='attribute'>#[<span class='ident'>test</span>]</span>
 <span class='kw'>fn</span> <span class='ident'>endian_size</span>() {
     <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>::<span class='ident'>size_of</span>;
-    <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>feature</span> <span class='op'>=</span> <span class='string'>&quot;unstable&quot;</span>)]</span>
     <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>::<span class='ident'>align_of</span>;
-    <span class='attribute'>#[<span class='ident'>cfg</span>(<span class='ident'>not</span>(<span class='ident'>feature</span> <span class='op'>=</span> <span class='string'>&quot;unstable&quot;</span>))]</span>
-    <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>::<span class='ident'>min_align_of</span> <span class='kw'>as</span> <span class='ident'>align_of</span>;
 
     <span class='kw'>type</span> <span class='ident'>B</span> <span class='op'>=</span> <span class='ident'>NativeEndian</span>;
 
@@ -473,8 +467,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
