--- a/src/pod/lib.rs.html
+++ b/src/pod/lib.rs.html
@@ -111,7 +111,7 @@
 <span class='doccomment'>//! # Example</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```</span>
-<span class='doccomment'>//! use pod::{Pod, PodExt, Le, Be};</span>
+<span class='doccomment'>//! use pod::{Pod, Le, Be};</span>
 <span class='doccomment'>//! # #[cfg(not(feature = &quot;unstable&quot;))]</span>
 <span class='doccomment'>//! # mod stable {</span>
 <span class='doccomment'>//! # use pod::packed::{Unaligned, Packed};</span>
@@ -121,7 +121,7 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! unsafe impl Pod for Data { }</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! #[repr(packed)]</span>
+<span class='doccomment'>//! #[repr(C)]</span>
 <span class='doccomment'>//! struct Data(u8, Le&lt;u16&gt;, Be&lt;u32&gt;);</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! # fn main() {</span>
@@ -153,7 +153,7 @@
 
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>endian</span>::{<span class='ident'>Le</span>, <span class='ident'>Be</span>, <span class='ident'>Native</span>};
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>code</span>::{<span class='ident'>Encode</span>, <span class='ident'>Decode</span>};
-<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>pod</span>::{<span class='ident'>Pod</span>, <span class='ident'>PodExt</span>};
+<span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>pod</span>::<span class='ident'>Pod</span>;
 
 <span class='doccomment'>/// Re-export the `packed` crate</span>
 <span class='kw'>pub</span> <span class='kw'>use</span> <span class='ident'>nue_packed</span> <span class='kw'>as</span> <span class='ident'>packed</span>;
@@ -193,8 +193,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
