--- a/src/pod/pod.rs.html
+++ b/src/pod/pod.rs.html
@@ -239,6 +239,25 @@
 <span id="197">197</span>
 <span id="198">198</span>
 <span id="199">199</span>
+<span id="200">200</span>
+<span id="201">201</span>
+<span id="202">202</span>
+<span id="203">203</span>
+<span id="204">204</span>
+<span id="205">205</span>
+<span id="206">206</span>
+<span id="207">207</span>
+<span id="208">208</span>
+<span id="209">209</span>
+<span id="210">210</span>
+<span id="211">211</span>
+<span id="212">212</span>
+<span id="213">213</span>
+<span id="214">214</span>
+<span id="215">215</span>
+<span id="216">216</span>
+<span id="217">217</span>
+<span id="218">218</span>
 </pre><pre class='rust '>
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>::{<span class='ident'>size_of</span>, <span class='ident'>transmute</span>, <span class='ident'>uninitialized</span>};
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>slice</span>::{<span class='ident'>from_raw_parts</span>, <span class='ident'>from_raw_parts_mut</span>};
@@ -251,6 +270,9 @@
 <span class='doccomment'>///</span>
 <span class='doccomment'>/// It is unsafe to `impl` this manually, use `#[derive(Pod)]` instead.</span>
 <span class='kw'>pub</span> <span class='kw'>unsafe</span> <span class='kw'>trait</span> <span class='ident'>Pod</span>: <span class='ident'>Sized</span> {
+    <span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
+    <span class='kw'>fn</span> <span class='ident'>__assert_pod</span>() { }
+
     <span class='doccomment'>/// Safely borrows the aligned value mutably</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// See also: `Aligned::as_aligned_mut`</span>
@@ -275,12 +297,6 @@
         <span class='kw'>unsafe</span> { <span class='ident'>Self</span>::<span class='ident'>from_unaligned</span>(<span class='ident'>s</span>) }
     }
 
-    <span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
-    <span class='kw'>fn</span> <span class='ident'>__assert_pod</span>() { }
-}
-
-<span class='doccomment'>/// Helper methods for converting POD types to/from byte slices and vectors</span>
-<span class='kw'>pub</span> <span class='kw'>trait</span> <span class='ident'>PodExt</span>: <span class='ident'>Sized</span> {
     <span class='doccomment'>/// Borrows the POD as a byte slice</span>
     <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>fn</span> <span class='ident'>as_slice</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span><span class='op'>&gt;</span>(<span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> [<span class='ident'>u8</span>] {
@@ -391,9 +407,31 @@
     <span class='kw'>fn</span> <span class='ident'>zeroed</span>() <span class='op'>-&gt;</span> <span class='kw'>Self</span> {
         <span class='kw'>unsafe</span> { <span class='ident'>uninitialized</span>::<span class='ident'>uninitialized</span>() }
     }
-}
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>T</span>: <span class='ident'>Pod</span><span class='op'>&gt;</span> <span class='ident'>PodExt</span> <span class='kw'>for</span> <span class='ident'>T</span> { }
+    <span class='doccomment'>/// Maps a POD slice from one type to another</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// # Panics</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// Will panic if the output type does not perfectly fit into the slice.</span>
+    <span class='attribute'>#[<span class='ident'>inline</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>map_slice</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>T</span>: <span class='ident'>Pod</span> <span class='op'>+</span> <span class='ident'>Unaligned</span><span class='op'>&gt;</span>(<span class='ident'>s</span>: <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> [<span class='kw'>Self</span>]) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> [<span class='ident'>T</span>] <span class='kw'>where</span> <span class='kw'>Self</span>: <span class='ident'>Unaligned</span> {
+        <span class='kw'>let</span> <span class='ident'>len</span> <span class='op'>=</span> <span class='ident'>s</span>.<span class='ident'>len</span>() <span class='op'>*</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='kw'>Self</span><span class='op'>&gt;</span>();
+        <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>len</span> <span class='op'>%</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span>(), <span class='number'>0</span>);
+        <span class='kw'>unsafe</span> { <span class='ident'>from_raw_parts</span>(<span class='ident'>s</span>.<span class='ident'>as_ptr</span>() <span class='kw'>as</span> <span class='op'>*</span><span class='kw'>const</span> <span class='ident'>T</span>, <span class='ident'>len</span> <span class='op'>/</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span>()) }
+    }
+
+    <span class='doccomment'>/// Maps a mutable POD slice from one type to another</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// # Panics</span>
+    <span class='doccomment'>///</span>
+    <span class='doccomment'>/// Will panic if the output type does not perfectly fit into the slice.</span>
+    <span class='attribute'>#[<span class='ident'>inline</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>map_mut_slice</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>T</span>: <span class='ident'>Pod</span> <span class='op'>+</span> <span class='ident'>Unaligned</span><span class='op'>&gt;</span>(<span class='ident'>s</span>: <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> [<span class='kw'>Self</span>]) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> [<span class='ident'>T</span>] <span class='kw'>where</span> <span class='kw'>Self</span>: <span class='ident'>Unaligned</span> {
+        <span class='kw'>let</span> <span class='ident'>len</span> <span class='op'>=</span> <span class='ident'>s</span>.<span class='ident'>len</span>() <span class='op'>*</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='kw'>Self</span><span class='op'>&gt;</span>();
+        <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>len</span> <span class='op'>%</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span>(), <span class='number'>0</span>);
+        <span class='kw'>unsafe</span> { <span class='ident'>from_raw_parts_mut</span>(<span class='ident'>s</span>.<span class='ident'>as_mut_ptr</span>() <span class='kw'>as</span> <span class='op'>*</span><span class='kw-2'>mut</span> <span class='ident'>T</span>, <span class='ident'>len</span> <span class='op'>/</span> <span class='ident'>size_of</span>::<span class='op'>&lt;</span><span class='ident'>T</span><span class='op'>&gt;</span>()) }
+    }
+}
 
 <span class='kw'>unsafe</span> <span class='kw'>impl</span> <span class='ident'>Pod</span> <span class='kw'>for</span> () { }
 <span class='kw'>unsafe</span> <span class='kw'>impl</span> <span class='ident'>Pod</span> <span class='kw'>for</span> <span class='ident'>f32</span> { }
@@ -475,8 +513,8 @@
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
