--- a/uninitialized/fn.uninitialized.html
+++ b/uninitialized/fn.uninitialized.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-32204' class='srclink' href='http://doc.rust-lang.org/nightly/core/mem/fn.uninitialized.html?gotosrc=32204' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-32191' class='srclink' href='http://doc.rust-lang.org/nightly/core/mem/fn.uninitialized.html?gotosrc=32191' title='goto source code'>[src]</a></span></h1>
 <pre class='rust fn'>pub unsafe fn uninitialized&lt;T&gt;() -&gt; T</pre><div class='docblock'><p>Creates a value initialized to zero.</p>
 
 <p>This function is similar to allocating space for a local variable and zeroing it out (an unsafe
@@ -97,8 +97,8 @@ destructor will run on zeroed data, likely leading to crashes.</p>
                 <p>
                     Accepted types are: <code>fn</code>, <code>mod</code>,
                     <code>struct</code>, <code>enum</code>,
-                    <code>trait</code>, <code>typedef</code> (or
-                    <code>tdef</code>).
+                    <code>trait</code>, <code>type</code>, <code>macro</code>,
+                    and <code>const</code>.
                 </p>
 
                 <p>
